# Torrent

./: .gitignore  .gitmodules  README.md  makeProjects.bat  make_project_buildApp_vs19x64.bat  make_project_client_vs19x64.bat  opensslBuildHelp.txt  torrentLibsBuildHelp.txt
buildApp/: BuildAppConfig.h.in  CMakeLists.txt  PseudoConsoleTest.cpp  PseudoConsoleTest.h  main.cpp
buildApp/Filesystem/: FilesystemWin.cpp  FilesystemWin.h  IFilesystem.h  IFilesystemProgress.h
buildApp/Helpers/: GetAddressOf.h  GetAddressOfHelper.h  GetAddressOfPtrTraits.h  GetAddressOfTraits.h  HResultException.cpp  HResultException.h  Scope.h  Utf.cpp  Utf.h  WinApiDeleters.cpp  WinApiDeleters.h  WinApiEvent.cpp  WinApiEvent.h  WinApiException.cpp  WinApiException.h  WinApiSmartHandle.h  WinApiVal.h
buildApp/Platform/: IPlatformFactory.h  WinCoInit.cpp  WinCoInit.h  WinPlatformFactory.cpp  WinPlatformFactory.h
buildApp/Process/: AsyncPipeReader.cpp  AsyncPipeReader.h  IProcessTaskHandler.h  IStdIn.h  MyCreatePipeEx.cpp  MyCreatePipeEx.h  Pipe.cpp  Pipe.h  PipeStdIn.cpp  PipeStdIn.h  ProcessHelpers.cpp  ProcessHelpers.h  ProcessInformation.cpp  ProcessInformation.h  ProcessJobScope.cpp  ProcessJobScope.h  ProcessTask.cpp  ProcessTask.h  ProcessTaskParameters.h  PseudoConsole.cpp  PseudoConsole.h  Utf8ConsoleProcess.cpp  Utf8ConsoleProcess.h
buildApp/TerminalParser/: DefaultTerminalParser.cpp  DefaultTerminalParser.h  DispatchTypes.hpp  FocusEvent.cpp  IInputEvent.cpp  IInputEvent.hpp  IInteractDispatch.hpp  IStateMachineEngine.hpp  ITermDispatch.hpp  ITerminalHandler.h  ITerminalOutputConnection.hpp  ITerminalParser.h  InputStateMachineEngine.cpp  InputStateMachineEngine.hpp  KeyEvent.cpp  LineRendition.hpp  MenuEvent.cpp  ModifierKeyState.cpp  MouseEvent.cpp  OutputStateMachineEngine.cpp  OutputStateMachineEngine.hpp  WindowBufferSizeEvent.cpp  ascii.hpp  base64.cpp  base64.hpp  colorTable.cpp  colorTable.hpp  stateMachine.cpp  stateMachine.hpp  termDispatch.hpp  til.h  unicode.hpp  utils.cpp  utils.hpp  utilsHeader.h
buildApp/TerminalParser/oss/chromium/: MAINTAINER_README.md  cgmanifest.json
buildApp/TerminalParser/til/: at.h  bitmap.h  coalesce.h  color.h  math.h  operators.h  pmr.h  point.h  rectangle.h  replace.h  size.h  some.h  spsc.h  static_map.h  u8u16convert.h  visualize_control_codes.h
client/: CMakeLists.txt  main.cpp
utils/: build.lua
